# bid754

./: .gitignore  ARCHITECTURE_SPEC.md  BUILD.md  Makefile  Package.swift  README.ko.md  README.md  THIRD_PARTY_NOTICES.md  api_v2.go  api_v2_test.go  binary_public_test.go  c_bid_benchmark_native.go  c_bid_benchmark_test.go  compare_public_test.go  decimal128_public_test.go  dectest_class.go  dectest_comparetotal.go  dectest_copy.go  dectest_fma.go  dectest_minmax.go  dectest_nexttoward.go  dectest_remaindernear.go  dectest_samequantum.go  dectest_skipflags_native_test.go  dectest_tointegral.go  example_test.go  ffi_native_stub.go  generated_dectest_dispatch.go  generated_ffi_bitcompare_native.go  generated_ffi_bitcompare_native_test.go  generated_ffi_bitcompare_stub_test.go  generated_readtest_cases_native_test.go  generated_types.go  go.mod  intel_bid_optimization_test.go  native_support.go  native_support_enabled.go  native_test_helpers_test.go  run_tests.sh  sign_minus_test.go  (+9 more)
bid-codec-java/: README.md  build.gradle  settings.gradle
bid-codec-js/: package.json  tsconfig.json  vector_runner.mjs
bid-codec-py/: .gitignore
bid-codec-rs/: Cargo.toml  LICENSE  README.md
bid-codec-swift/: Package.swift  README.md
bid-codec-vectors/: README.md
bid-go/: add128_inline.go  add64.go  (+69 more)
bid754-codec-py/: README.md  pyproject.toml
bid754-codec-py/bid_codec/: bid.py
bid754-codec-py/tests/: test_bid.py  test_vectors.py
bid754-codec-rs/: Cargo.toml  README.md
bid754-codec-rs/tests/: vectors.rs
bid754-rs/libbid-sys/: Cargo.toml  build.rs
bid754-rs/libbid-sys/src/: lib.rs
(+333 files in other folders)
