[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bid754-codec"
version = "0.1.0"
description = "BID (Binary Integer Decimal) encoding/decoding for IEEE 754 decimal floating-point"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/sky1core/bid754"
Repository = "https://github.com/sky1core/bid754"

[project.optional-dependencies]
test = ["pytest==9.0.2"]

[tool.setuptools.package-data]
bid_codec = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
