[package]
name = "libbid-sys"
version = "0.1.0"
edition = "2021"
description = "FFI bindings for the Intel libbid decimal floating-point library"
license = "MIT"
repository = "https://github.com/sky1core/bid754"
publish = false
links = "bid"
build = "build.rs"

[lib]
name = "libbid_sys"
path = "src/lib.rs"
